Fix alignment of discount

--- a/src/components/pattern-item/PatternItem.module.scss
+++ b/src/components/pattern-item/PatternItem.module.scss
@@ -33,18 +33,19 @@
         background-color: #d03333;
         border-radius: 50%;
         right: 10px;
-        top: 0;
+        top: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
         color: white;
         font-family: "Fredericka the Great";
         @include mobile {
-            width: 60px;
-            height: 60px;
+            width: 40px;
+            height: 40px;
             right: unset;
-            left: 110px;
-            font-size: 20px;
+            left: 132px;
+            top: 3px;
+            font-size: 15px;
         }
     }
 
